# ptex

src/: CMakeLists.txt
src/ptex/: CMakeLists.txt  PtexReader.cpp
src/utils/: CMakeLists.txt
